Fix: tx modal with collapsed sidebar (#2188)

--- a/src/components/common/TxModalDialog/styles.module.css
+++ b/src/components/common/TxModalDialog/styles.module.css
@@ -1,7 +1,12 @@
 .dialog {
   top: 52px;
   left: 230px;
-  z-index: 1200;
+  z-index: 1;
+  transition: left 225ms cubic-bezier(0, 0, 0.2, 1) 0ms;
+}
+
+.dialog.fullWidth {
+  left: 0;
 }
 
 .dialog :global .MuiDialogActions-root {
